Fix layout issue caused by rebase

--- a/app/assets/stylesheets/layout/page_specific/_article_page.scss
+++ b/app/assets/stylesheets/layout/page_specific/_article_page.scss
@@ -18,6 +18,7 @@
   .l-article-main {
     @include column(9);
     @include push(3);
+    margin-bottom: $baseline-unit*2;
   }
 
   .l-hr-article-intro,
@@ -27,11 +28,6 @@
 
   .l-article .related-categories {
     @include column(3);
-  }
-
-  .l-article-main {
-    @include column(9);
-    margin-bottom: $baseline-unit*2;
   }
 
   .l-article .related-links {
